fix(ui): Pill release hovercards need wrapped

--- a/src/sentry/static/sentry/less/sentry-hovercard.less
+++ b/src/sentry/static/sentry/less/sentry-hovercard.less
@@ -22,6 +22,7 @@
   z-index: 1000;
   box-shadow: 0 0 35px 0 rgba(67, 62, 75, 0.2);
   border: 1px solid @trim;
+  white-space: initial;
 
   // The hovercard may appear in different contexts, don't inherit fonts
   font-family: @font-family-base;
